--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="NANOCP.png" alt="" width="100" height="50">
+            <img src="logo.png" alt="" width="100" height="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-6">
-                <img src="NANOCP.png" class="img-fluid" alt="" width="300" height="150">
+                <img src="logo.png" class="img-fluid" alt="" width="300" height="150">
                 <div class="h4">A New Type of Reversing Platform</div>
                 <br>
                 <div class="btn-group" role="group" aria-label="Basic mixed styles example">
